cabal-version:      3.0
name:               comments
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable comments
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        comments,
        cauldron,
        --
        dani-sqlite,
        log-base,
        servant-server,
        dani-sqlite:pool,
        dani-beans:threadlocal,
        dani-beans:jsonconf,
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options: -threaded

library
    exposed-modules:  
        -- modules proper to this application
        Comments
        Comments.Repository
        Comments.Repository.Sqlite
        Comments.Api
        Comments.Server
        Comments.Runner
        -- some stuff vendored from other places
        Lucid.Servant
    build-depends:
        base,
        servant,
        servant-server,
        lucid2,
        dani-servant-lucid2,
        text,
        bytestring,
        containers,
        aeson,
        dani-sqlite,
        dani-sqlite:pool,
        log-base,
        http-media,
        warp,
        yaml,
        resource-pool,
        transformers,
        http-api-data,
        http-types,
        unordered-containers,
        dani-beans:threadlocal,
        dani-beans:jsonconf,
    hs-source-dirs:   lib
    default-language: GHC2021
    ghc-options: -threaded

