cabal-version:      3.0
name:               comments
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common language
    ghc-options: -Wall
    default-language: GHC2024

executable comments
    import:           
        language
    main-is:          
        Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        comments,
    hs-source-dirs:   
        app
    ghc-options: -threaded

-- | Executable that generates .dot diagrams of the application dependency graph.
executable comments-depdiag
    import:           
        language
    main-is:          
        Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        comments,
    hs-source-dirs:   
        app-depdiag
    ghc-options: -threaded

library
    import:           
        language
    exposed-modules:  
        -- modules proper to this application
        Comments
        Comments.Model
        Comments.Repository
        Comments.Repository.Sqlite
        Comments.Api
        Comments.Server
        Comments.Runner
    build-depends:
        base,
        cauldron,
        servant,
        servant-server,
        lucid2,
        dani-servant-lucid2,
        text,
        bytestring,
        containers,
        aeson,
        dani-sqlite,
        dani-sqlite:pool,
        log-base,
        http-media,
        warp,
        yaml,
        resource-pool,
        transformers,
        http-api-data,
        http-types,
        unordered-containers,
        dani-beans:threadlocal,
        dani-beans:jsonconf,
        network-uri,
    hs-source-dirs:   lib

