cabal-version:      3.0
name:               comments
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common language
    ghc-options: -Wall
    default-language: GHC2021

executable comments
    import:           
        language
    main-is:          
        Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        comments,
    hs-source-dirs:   
        app
    ghc-options: -threaded

-- | Executable that generates .dot diagrams of the application dependency graph.
executable comments-depgraph
    import:           
        language
    main-is:          
        Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        comments,
    hs-source-dirs:   
        app-depgraph
    ghc-options: -threaded

library
    import:           
        language
    exposed-modules:  
        -- modules proper to this application
        Comments.Root
        Comments
        Comments.Sqlite
        Comments.Repository
        Comments.Repository.Sqlite
        Comments.Api
        Comments.Api.Server
        Comments.Api.Wai
        Comments.Api.Runner
    build-depends:
        base,
        cauldron,
        servant,
        servant-server,
        lucid2,
        dani-servant-lucid2,
        text,
        bytestring,
        containers,
        aeson,
        dani-sqlite,
        dani-sqlite:pool,
        log-base,
        http-media,
        warp,
        yaml,
        resource-pool,
        transformers,
        http-api-data,
        http-types,
        unordered-containers,
        dani-beans:threadlocal,
        dani-beans:jsonconf,
        network-uri,
        dani-beans-wai,
    hs-source-dirs:   lib

library dani-beans-wai
    import:           language
    exposed-modules:
        Network.Wai.Newtypes
    build-depends:
        base,
        wai
    hs-source-dirs:   lib-wai
    -- other-modules:

test-suite comments-test
    import:           language
    type:             exitcode-stdio-1.0
    main-is:          tests.hs
    hs-source-dirs:   test
    build-depends:
        base,
        comments,
        tasty,
        tasty-hunit

