cabal-version:      3.0
name:               dani-beans
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library threadlocal
    exposed-modules:  
        ThreadLocal
    build-depends:
        base,
        text,
        bytestring,
        containers,
        unordered-containers,
    hs-source-dirs:   lib-threadlocal
    default-language: GHC2021
    ghc-options: -threaded
    visibility:      public

library jsonconf
    exposed-modules:  
        JsonConf
        JsonConf.YamlFile
    build-depends:
        base,
        text,
        bytestring,
        containers,
        aeson,
        yaml,
    hs-source-dirs:   lib-jsonconf
    default-language: GHC2021
    ghc-options: -threaded
    visibility:      public